tests/files/sprintf_error.out
*** Testing sprintf() : error conditions ***

-- Testing sprintf() function with Zero arguments --
Too few arguments to function user_sprintf(), 0 passed in /Volumes/WebServer/Projects/php.fprint/tests/files/sprintf_error.php on line 7 and exactly 1 expected

-- Testing sprintf() function with less than expected no. of arguments --

Fatal error: Uncaught ValueError: The arguments array must contain 1 items, 0 given in /Volumes/WebServer/Projects/php.fprint/functions.php:15
Stack trace:
#0 /Volumes/WebServer/Projects/php.fprint/functions.php(15): vsprintf('%s', Array)
#1 /Volumes/WebServer/Projects/php.fprint/functions.php(19): user_vsprintf('%s', Array)
#2 /Volumes/WebServer/Projects/php.fprint/tests/files/sprintf_error.php(21): user_sprintf('%s')
#3 {main}
  thrown in /Volumes/WebServer/Projects/php.fprint/functions.php on line 15